Report the wasted network bytes when resource prefetches hit max limit

BUG=625270

Review-Url: https://codereview.chromium.org/2278793002
Cr-Commit-Position: refs/heads/master@{#418646}

Former-commit-id: a30b7788400d638152f4727173e44a5b362903a2